--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ header .container {
     width: 50px; /* Adjust based on your logo size */
     height: auto;
     margin-right: 15px;
+    border: 2px solid red; /* Debugging border */
 }
 
 header h1 {
